Updated paths of the javascript files into debian/rules

--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,7 @@
 # -*- makefile -*-
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+# export DH_VERBOSE=1
 
 %:
 	dh $@
@@ -11,12 +11,12 @@ override_dh_auto_install:
 	mkdir -p debian/libjs-jquery-colorbox/usr/share/javascript/jquery-colorbox
 
 	yui-compressor \
-		colorbox/jquery.colorbox.js \
+		jquery.colorbox.js \
 		-o \
 		debian/libjs-jquery-colorbox/usr/share/javascript/jquery-colorbox/jquery.colorbox-min.js
 
 	dh_install \
-		colorbox/jquery.colorbox.js \
+		jquery.colorbox.js \
 		usr/share/javascript/jquery-colorbox/
 
 override_dh_installchangelogs:
