--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: Agustin Henze <tin@sluc.org.ar>
 Build-Depends: debhelper (>= 9)
-Build-Depends-Indep: yui-compressor
+Build-Depends-Indep: slimit
 Standards-Version: 3.9.4
 Homepage: http://www.jacklmoore.com/colorbox
 Vcs-Git: git://anonscm.debian.org/collab-maint/jquery-colorbox.git
