--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
 	"name": "jquery-colorbox",
 	"description": "jQuery lightbox and modal window plugin",
-	"version": "1.4.33",
+	"version": "1.4.37",
 	"dependencies": {
 		"jquery": ">=1.3.2"
 	},
@@ -27,5 +27,15 @@
 		}
 	],
 	"homepage": "http://www.jacklmoore.com/colorbox",
-	"main": "jquery.colorbox.js"
+	"main": "jquery.colorbox.js",
+	"ignore": [
+		"colorbox.jquery.json",
+		"colorbox.ai",
+		"content",
+		"example1/index.html",
+		"example2/index.html",
+		"example3/index.html",
+		"example4/index.html",
+		"example5/index.html"
+	]
 }
